package com.rbac.enums;

/**
 * defines all the user action types possible on a resource
 */
public enum ActionTypes {
  /**
   * Read action types.
   */
  READ,
  /**
   * Delete action types.
   */
  DELETE,
  /**
   * Write action types.
   */
  WRITE
}
